src/objects/States__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the list of states in India</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeveloped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeveloped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>States</label>
</CustomObject>